--- a/public/status.html
+++ b/public/status.html
@@ -52,6 +52,7 @@
             crossorigin="anonymous"></script>
 
         <script>
+            // init daily data
             var total_daily_data = 0
             var total_daily_kwh = 0
             var total_daily_wh = 0
@@ -63,6 +64,7 @@
             var last_daily_wh = 0
             var last_daily_joule = 0
 
+            // init monthly data
             var total_monthly_data = 0
             var total_monthly_kwh = 0
             var total_monthly_wh = 0
@@ -74,23 +76,31 @@
             var last_monthly_wh = 0
             var last_monthly_joule = 0
 
+            // init label
             var last_date = ""
             var last_month = ""
+
             $(document).ready(function(){
                 $.get("https://us-central1-energy-monitoring-6c8ab.cloudfunctions.net/app/api/energy_daily", function(data){
+                    // itterate every data item
                     data.forEach(function(item){
+                        // get item then sum it to daily total global variable
                         total_daily_kwh += item["kwh"]
                         total_daily_wh += item["wh"]
                         total_daily_joule += item["joule"]
+                        // get item then add it daily last global variable
                         last_daily_kwh = item["kwh"]
                         last_daily_wh = item["wh"]
                         last_daily_joule = item["joule"]
+                        // get last date label
                         last_date = item['date']
                         total_daily_data ++
                     });
+                    // calculate average
                     total_average_daily_kwh = total_daily_kwh/total_daily_data
                     total_average_daily_wh = total_daily_wh/total_daily_data
                     total_average_daily_joule = total_daily_joule/total_daily_data
+                    // add data to html element
                     $("#avg_daily_kwh").html(total_average_daily_kwh.toLocaleString())
                     $("#last_daily_kwh").html(last_daily_kwh.toLocaleString())
                     $("#last_date_label").html(last_date)
@@ -98,18 +108,23 @@
 
                 $.get("https://us-central1-energy-monitoring-6c8ab.cloudfunctions.net/app/api/energy_monthly", function(data){
                     data.forEach(function(item){
+                        // get item then sum it to monthly total global variable
                         total_monthly_kwh += item["kwh"]
                         total_monthly_wh += item["wh"]
                         total_monthly_joule += item["joule"]
+                        // get item then add it monthly last global variable
                         last_monthly_kwh = item["kwh"]
                         last_monthly_wh = item["wh"]
                         last_monthly_joule = item["joule"]
+                        // get last month label
                         last_month = item['date']
                         total_monthly_data ++
                     });
+                    // calculate average
                     total_average_monthly_kwh = total_monthly_kwh/total_monthly_data
                     total_average_monthly_wh = total_monthly_wh/total_monthly_data
                     total_average_monthly_joule = total_monthly_joule/total_monthly_data
+                    // add data to html element
                     $("#avg_monthly_kwh").html(total_average_monthly_kwh.toLocaleString())
                     $("#last_monthly_kwh").html(last_monthly_kwh.toLocaleString())
                     $("#last_month_label").html(last_month)
